syntax = "proto3";

package backup;

service BackupService {
  rpc FindBackups(FindBackupsRequest) returns (FindBackupsResponse) {}
  rpc FindBackup(FindBackupRequest) returns (FindBackupResponse) {}
  rpc AddBackup(AddBackupRequest) returns (AddBackupResponse) {}
  rpc HardDeleteBackups(HardDeleteBackupsRequest) returns (DeleteResponse) {}
}

// 复制内容情报
message CopyInfo {
  string copy_type = 1;
  string source = 2;
  int64  count = 3;
}

// 备份
message Backup {
  string backup_id = 1;
  string backup_name = 2;
  string backup_type = 12; // 备份类型，有template（模板），（database）数据库
  string customer_id = 3;
  string app_id = 4;
  string app_type = 15;
  bool   has_data = 5;
  int64  size = 6;
  repeated CopyInfo copy_info_list = 7; 
  string file_name = 8;    
  string file_path = 9;    
  string cloud_file_name = 13;    
  string cloud_file_path = 14;    
  string created_at = 10;    
  string created_by = 11;
}

message FindBackupsRequest{
  string customer_id = 1;
  string backup_name = 2;
  string backup_type = 4;
  string database = 3;
}

message FindBackupsResponse{
  repeated Backup backups = 1;
}

message FindBackupRequest{
  string backup_id = 1;
  string database = 2;
}

message FindBackupResponse{
  Backup backup = 1;
}

message AddBackupRequest{
  string backup_name = 1;
  string backup_type = 11;
  string customer_id = 2;
  string app_id = 3;
  string app_type = 14;
  bool   has_data = 4;
  int64  size = 5;
  repeated CopyInfo copy_info_list = 6; 
  string file_name = 7;    
  string file_path = 8;    
  string cloud_file_name = 12;    
  string cloud_file_path = 13;    
  string writer = 9;
  string database = 10;
}

message AddBackupResponse{
  string backup_id = 1;
}

message HardDeleteBackupsRequest{
  repeated string backup_id_list = 1;
  string database = 2;
}


message DeleteResponse{
}
